# mooncycle

./: Cargo.toml  README.md  flake.nix
assets/sounds/: crash.ogg:Zone.Identifier  game_over.mp3:Zone.Identifier
src/: arena_plugin.rs  main.rs
src/plugins/: arena.rs  enemy.rs  mod.rs  planet.rs  player.rs  score.rs  spinner.rs
