[package]
name = "nix-bevy-wasm-trunk"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.12.0" }
wee_alloc = "0.4.5"
bevy_rapier2d = "0.22.0"
rand = "0.8.5"

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

